Personal_Portfolio.css
/* ... */
.contact .row form .message {
  height: 15rem;
  resize: none;
}

/* Responsive Media Queries */
/* Large Desktop (1200px and up) */
@media (min-width: 1200px) {
  section {
    padding: 5rem 15%;
  }

  .header {
    padding: 1.5rem 15%;
  }
}

/* Laptop (992px to 1199px) */
@media (max-width: 1199px) {
  section {
    padding: 5rem 7%;
  }

  .header {
    padding: 1.5rem 7%;
  }

  .home .home-img {
    height: 35rem;
    width: 35rem;
  }
}

/* Tablet (768px to 991px) */
@media (max-width: 991px) {
  html {
    font-size: 55%;
  }

  section {
    padding: 5rem 5%;
  }

  .header {
    padding: 1.5rem 5%;
  }

  .header #menu-btn {
    display: inline-block;
  }

  .timeline::before {
    left: 3.1rem;
  }

  .timeline-item {
    width: 100%;
    padding-left: 8rem;
    padding-right: 2rem;
    text-align: left;
  }

  .timeline-item:nth-child(even) {
    left: 0;
  }

  .timeline-item::after {
    left: 1.9rem;
  }

  .timeline-item:nth-child(odd)::after {
    left: 1.9rem;
    right: auto;
  }

  .home .home-img {
    height: 30rem;
    width: 30rem;
  }

  .projects .box-container {
    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
  }
}

/* Mobile Landscape (576px to 767px) */
@media (max-width: 767px) {
  .heading {
    font-size: 4rem;
  }

  .home h3 {
    font-size: 3.5rem;
  }

  .home .home-text {
    font-size: 4rem;
  }

  .home .home-img {
    height: 25rem;
    width: 25rem;
  }

  .navbar a {
    font-size: 3rem;
  }

  .about .info-container {
    flex-direction: column;
  }

  .about .info-container .info:first-child {
    text-align: center;
  }

  .contact .row {
    flex-direction: column;
  }

  .projects .box-container {
    grid-template-columns: 1fr;
  }
}

/* Mobile Portrait (up to 575px) */
@media (max-width: 575px) {
  html {
    font-size: 50%;
  }

  .heading {
    font-size: 3.5rem;
  }

  .home h3 {
    font-size: 3rem;
  }

  .home .home-text {
    font-size: 3.5rem;
  }

  .home .home-img {
    height: 20rem;
    width: 20rem;
  }

  .navbar {
    width: 100%;
  }

  .navbar-img {
    width: 100%;
  }

  .timeline-content h3 {
    font-size: 2rem;
  }

  .timeline-content h4 {
    font-size: 1.6rem;
  }

  .timeline-content p,
  .timeline-content ul {
    font-size: 1.4rem;
  }

  .contact .row .content,
  .contact .row form {
    padding: 2rem 1.5rem;
  }
}

